# ubuntu-settings-components

./: CMakeLists.txt  README  SettingsComponents.qml  runtests.sh
Ubuntu/Settings/Components/: ActionTextField.qml  QuickReply.qml  StatusIcon.qml
Ubuntu/Settings/Menus/: BluetoothMenu.qml  SnapDecisionMenu.qml  TextMessageMenu.qml  qmldir
cmake/modules/: QmlPlugins.cmake
debian/: bileto_pre_release_hook  changelog  control  qml-module-ubuntu-settings-components.install  rules
debian/tests/: qmluitests.sh
examples/: FilePickerComponent.qml  Fingerprint.qml  MessageComponents.qml  OtherComponents.qml  PrinterQueue.qml  Printers.qml  Queue.qml  SettingsComponents.qml  TransferComponents.qml
plugins/: CMakeLists.txt
plugins/Ubuntu/Settings/: CMakeLists.txt
plugins/Ubuntu/Settings/Components/: ActionTextField.qml  CMakeLists.txt  Calendar.js  Calendar.qml  FilePicker.qml  MessageHeader.qml  dateExt.js  filepickerhelper.cpp  filepickerhelper.h  plugin.cpp  qmldir  serverpropertysynchroniser.cpp
plugins/Ubuntu/Settings/Fingerprint/: Fingerprint.qml  Fingerprints.qml  Setup.qml  plugin.cpp
plugins/Ubuntu/Settings/Menus/: AccessPointMenu.qml  BaseLayoutMenu.qml  BaseMenu.qml  BaseStyle.qml  ButtonMenu.qml  CMakeLists.txt  CalendarMenu.qml  CheckableMenu.qml  EthernetItem.qml  EventMenu.qml  GroupedMessageMenu.qml  MediaPlayerMenu.qml  Menus.qmltypes  ModemInfoItem.qml  PlaybackButton.qml  PlaybackItemMenu.qml  PointerStyle.qml  ProgressBarMenu.qml  ProgressValueMenu.qml  RadioMenu.qml  SectionMenu.qml  SeparatorMenu.qml  SimpleMessageMenu.qml  SliderMenu.qml  SnapDecisionMenu.qml  StandardMenu.qml  StyledSlotsLayout.qml  SwitchMenu.qml  TextMessageMenu.qml  TimeZoneMenu.qml  TouchStyle.qml  TransferMenu.qml  UserSessionMenu.qml  qmldir
plugins/Ubuntu/Settings/Menus/Style/: BaseStyle.qml  CMakeLists.txt  MenuPaddings.qml  PointerStyle.qml  TouchStyle.qml  qmldir
plugins/Ubuntu/Settings/Printers/: CMakeLists.txt  cupspkhelpermechanism.cpp  enums.h  metatypes.h  plugin.cpp  plugin.h  printer.h  printer_p.cpp  printers.cpp  printers.h  printers_global.h  printers_p.h  qmldir  structs.h  utils.h
plugins/Ubuntu/Settings/Printers/backend/: backend.cpp  backend.h  backend_cups.cpp  backend_cups.h  backend_pdf.cpp  backend_pdf.h
plugins/Ubuntu/Settings/Printers/cups/: cupsfacade.cpp  cupsfacade.h  cupsfacade_impl.cpp  cupsfacade_impl.h  cupspkhelper.cpp  cupspkhelper.h  ippclient.cpp  ippclient.h  pkhelper.cpp  pkhelper.h  printerdriverloader.cpp  printerloader.cpp  printersloader.cpp  printersloader.h
plugins/Ubuntu/Settings/Printers/dbus/: cupspkhelpermechanism.h  org.opensuse.CupsPkHelper.Mechanism.xml
plugins/Ubuntu/Settings/Printers/job/: cancelobservable.h  job.h
plugins/Ubuntu/Settings/Printers/models/: drivermodel.cpp  drivermodel.h  jobmodel.cpp  jobmodel.h  printermodel.cpp  printermodel.h  printermodel_p.h
plugins/Ubuntu/Settings/Printers/printer/: printer.cpp  printer.h  printer_p.h  printerinfo.h  printerinfo_allimpl.cpp  printerinfo_allimpl.h  printerinfo_impl.cpp  printerinfo_impl.h  printerinfo_pdfimpl.cpp  printerinfo_pdfimpl.h  printerjob.cpp  printerjob.h
plugins/Ubuntu/Settings/Printers/printers/: printers.cpp  printers.h  printers_p.h
plugins/Ubuntu/Settings/Vpn/: FileSelector.qml  VpnEditor.qml  qmldir
po/: am.po  ar.po  be.po  br.po  bs.po  ca.po  cy.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gd.po  gl.po  hr.po  hu.po  ia.po  id.po  it.po  ko.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  ubuntu-settings-components.pot  uk.po  update-usc-pot  zh_CN.po  zh_TW.po
tests/: CMakeLists.txt
tests/qmltests/: CMakeLists.txt
tests/qmltests/Components/: tst_ActionTextField.qml  tst_Calendar.qml  tst_FilePicker.qml  tst_ServerPropertySynchroniser.qml
tests/qmltests/Fingerprint/: tst_FingerprintNames.qml  tst_FingerprintSetup.qml  tst_Fingerprints.qml
tests/qmltests/Menus/: tst_BaseMenu.qml  tst_BluetoothMenu.qml  tst_ButtonMenu.qml  tst_CalendarMenu.qml  tst_CheckableMenu.qml  tst_EthernetItem.qml  tst_GroupedMessageMenu.qml  tst_RadioMenu.qml  tst_SimpleMessageMenu.qml  tst_SnapDecisionMenu.qml  tst_StandardMenu.qml  tst_SwitchMenu.qml  tst_TextMessageMenu.qml
tests/qmltests/mocks/: CMakeLists.txt
tests/qmltests/mocks/Biometryd/: CMakeLists.txt  MockDevice.cpp  MockFingerprintReader.cpp  MockOperation.cpp  MockService.cpp  MockService.h  MockTemplateStore.cpp  MockUser.cpp
tests/qmltests/mocks/GSettings.1.0/: CMakeLists.txt
tests/qmltests/mocks/Qt/labs/folderlistmodel/: CMakeLists.txt  plugin.cpp
tests/unittests/: CMakeLists.txt
tests/unittests/Printers/: CMakeLists.txt  mockbackend.h  mockcupsfacade.h  mockprinterinfo.h  tst_printer.cpp  tst_printerfilter.cpp  tst_printerjob.cpp  tst_printermodel.cpp  tst_printers.cpp
tests/utils/modules/: CMakeLists.txt
tests/utils/modules/Ubuntu/Test/: CMakeLists.txt  Test.qmltypes
