add_subdirectory(mocks)

add_usc_qmltest(Components ActionTextField)
add_usc_qmltest(Components Calendar)
add_usc_qmltest(Components ServerPropertySynchroniser)

add_usc_qmltest(Menus AccessPointMenu)
add_usc_qmltest(Menus BaseMenu)
add_usc_qmltest(Menus ButtonMenu)
add_usc_qmltest(Menus CalendarMenu)
add_usc_qmltest(Menus CheckableMenu)
add_usc_qmltest(Menus EventMenu)
add_usc_qmltest(Menus GroupedMessageMenu)
add_usc_qmltest(Menus MediaPlayerMenu)
add_usc_qmltest(Menus PlaybackItemMenu)
add_usc_qmltest(Menus ProgressBarMenu)
add_usc_qmltest(Menus ProgressValueMenu)
add_usc_qmltest(Menus SectionMenu)
add_usc_qmltest(Menus SimpleMessageMenu)
add_usc_qmltest(Menus SliderMenu)
add_usc_qmltest(Menus SnapDecisionMenu)
add_usc_qmltest(Menus SwitchMenu)
add_usc_qmltest(Menus UserSessionMenu)
add_usc_qmltest(Menus TextMessageMenu)
add_usc_qmltest(Menus TimeZoneMenu)
add_usc_qmltest(Menus TransferMenu)

add_usc_qmltest(Vpn VpnList)
add_usc_qmltest(Vpn VpnEditor)
add_usc_qmltest(Vpn VpnOpenvpnEditor)
add_usc_qmltest(Vpn VpnPptpEditor)
add_usc_qmltest(Vpn VpnPreviewDialogCertificateChecks)
add_usc_qmltest(Vpn VpnPreviewDialog ENVIRONMENT NO_SSL_CERTIFICATE_CHECK=1)

add_usc_qmltest(Fingerprint Fingerprints)
add_usc_qmltest(Fingerprint FingerprintNames)
add_usc_qmltest(Fingerprint FingerprintSetup)
add_usc_qmltest(Fingerprint FingerprintVisual)
